tests/checker/bad/bad_comment_2.scilla
scilla_version 0

(* This comment (* does not escape the nest. *)

library BadComment_2

contract BadComment_2 ()
